# Exemplo-de-implementacao-PySpark

./: .env.example  .gitignore  DrawIO_Diagrama_de_Fluxo_de_dados_e_Jobs.xml  README.md  TODO.md  docker-compose.yml  pip_remove.sh  pyproject.toml  requirements.txt  start_dev_container.bat  start_dev_container.sh
data/input/: compras.csv  condicao_pagamento.csv  tipo_endereco.csv
data/work/: compras_stg.parquet  rejected_compras_stg.csv
data/work/compras.parquet/: .part-00000-18e1c7e9-80ed-46f6-bb3b-8340060be207-c000.snappy.parquet.crc  part-00000-18e1c7e9-80ed-46f6-bb3b-8340060be207-c000.snappy.parquet
data/work/rejected_compras_stg.csv/: .part-00000-4cf2b890-3bd2-4867-81ce-7a89a9e344f8-c000.csv.crc  part-00000-4cf2b890-3bd2-4867-81ce-7a89a9e344f8-c000.csv
db/: athena_create_tables.sql  create_tables.sql  mssql_create_tables.sql
sh/: pip_install.sh  pip_install_from_requiremets_txt.sh
src/: AWS_GLUE_SPARK_JOB_stg_compras_parquet.py  AWS_GLUE_SPARK_JOB_tbl_condicao_pagamento.py  AWS_GLUE_SPARK_JOB_tbl_fornecedores.py  AWS_GLUE_SPARK_JOB_tbl_programacao_pagamento.py  AWS_GLUE_SPARK_JOB_tbl_tipo_endereco.py  stg_compras_parquet.py  tbl_cep.py  tbl_condicao_pagamento.py  tbl_enderecos_fornecedores.py  tbl_fornecedores.py  tbl_notas_fiscais_entrada.py  tbl_programacao_pagamento.py  tbl_tipo_endereco.py
src/external_libs/: data_loader.py
src/internal/: mssql_handler.py  pyspark_helper.py
src/spark_code/: stg_compras_parquet.py
