[tool.poetry]
name = "tcs-projeto-paulao"
version = "0.1.0"
description = ""
authors = ["Guilherme S. Magalhaes <silcol455@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
pyspark = "3.2.1"
ipykernel = "^6.29.2"
findspark = "^2.0.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
validate-docbr = "^1.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
